Fixed checkout spacing

--- a/src/scenes/Checkout/styles.scss
+++ b/src/scenes/Checkout/styles.scss
@@ -2,7 +2,7 @@
   padding-bottom: 40px;
 }
 
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .checkout-form-wrapper {
     width: 100%;
     
